--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
 <resources>
     <string name="facebook_app_id">910461436100463</string>
     <string name="fb_login_protocol_scheme">fb910461436100463</string>
+    <string name="app_name">Ponny Beaute</string>
 </resources>
